<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/field_email"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/edit_text_borders"
        android:ems="10"
        android:hint="@string/loginActivity_hintsEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/field_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/loginActivity_hintsPassword"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:background="@drawable/edit_text_borders"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/loginActivity_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/mainmenu_buttonoverlay"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onLoginClicked"
        android:text="@string/loginActivity_LoginButton"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loginActivity_loginButton"
        android:layout_alignTop="@+id/field_password"
        android:text="@string/loginActivity_GetPasswordButton" />

</RelativeLayout>